[package]
name = "hola"
version = "1.0.0"
authors = ["Saanu Reghunadh <saanu09xs@gmail.com>"]
edition = "2018"

description = "Windows Hello™ style facial authentication for Linux written in Rust"
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/dlib-face-recognition"
readme = "README.md"
license = "MIT"

build = "build.rs"

[features]
default = []
embed = ["ureq", "bzip2"]

[lib]
name = "pam_hola"
crate-type = ["cdylib"]

[dependencies]
v4l = { version = "0.10.1", default-features = false, features = ["libv4l"] }
dlib-face-recognition = { git = "https://github.com/saanuregh/dlib-face-recognition", branch = "encoding-patch" }
pamsm = { version = "0.4.1", default-features = false, features = ["libpam"] }
image = "0.23.9"
clap = "3.0.0-beta.2"
serde_json = "1.0"
serde = { version = "*", features = ["derive"] }
toml = "0.5.6"
indicatif = "0.15.0"
console = "0.12.0"
chrono = "0.4.15"
prettytable-rs = "^0.8"
subprocess = "0.2.6"

[build-dependencies]
cpp_build = { version = "0.5.5" }
bzip2 = { version = "0.4.1", optional = true }
ureq = { version = "1.4.1", optional = true }
